[package]
name = "termray"
version = "0.3.0"
edition = "2024"
authors = ["kako-jun"]
license = "MIT"
description = "Generic TUI raycasting engine — grid maps, DDA walls, floors/ceilings, sprites"
homepage = "https://github.com/kako-jun/termray"
repository = "https://github.com/kako-jun/termray"
readme = "README.md"
keywords = ["raycasting", "tui", "terminal", "3d", "engine"]
categories = ["rendering::engine", "game-development"]
exclude = [".github/", "target/"]
rust-version = "1.85.0"

[dependencies]
font8x8 = { version = "0.3.1", default-features = false }

[dev-dependencies]
crossterm = "0.29"

[[example]]
name = "maze"
path = "examples/maze.rs"

[[example]]
name = "free_camera"
path = "examples/free_camera.rs"

[[example]]
name = "terrain"
path = "examples/terrain.rs"

[[example]]
name = "labeled_sprites"
path = "examples/labeled_sprites.rs"

[[example]]
name = "slope"
path = "examples/slope.rs"

[profile.release]
lto = true
codegen-units = 1
